Refactor in some classes